# CardShield

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: DEMO.md  PRODUCTION.md  SETUP.md  commands.txt
migrations/: 001_production_schema.cql
notebooks/: data_cleaning.ipynb  fraud_detection.ipynb  model_training.ipynb
scripts/: demo_check.py  producer.py
src/: api.py  app_logging.py  cassandra_repository.py  config.py  migrate.py  model_service.py  preprocessing.py  producer.py  schemas.py  static_export.py  streaming_job.py  training.py
tests/: __init__.py  test_api.py  test_config.py  test_preprocessing.py  test_producer.py  test_repository.py  test_schemas.py  test_static_export.py
web/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/public/: cardshield_workflow.html
web/public/snapshots/: dashboard.json  health.json  manifest.json  model.json  options.json  predictions.json  presets.json
web/src/: App.tsx  api.ts  demoData.ts  riskSignals.test.ts  riskSignals.ts  styles.css  types.ts
web/src/components/: Layout.tsx
web/src/pages/: DashboardPage.tsx  LandingPage.tsx  SimulatorPage.tsx  SystemPage.tsx
