[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardshield"
version = "0.1.0"
description = "Production-oriented streaming credit card fraud detection"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "cassandra-driver>=3.29,<4",
    "kafka-python>=2.2,<4",
    "pandas>=2.2,<4",
    "pyspark==3.5.6",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
training = [
    "scikit-learn>=1.5,<2",
]
web = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
]
dev = [
    "mypy>=1.10,<2",
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.8,<1",
]

[project.scripts]
cardshield-preprocess = "preprocessing:main"
cardshield-train = "training:main"
cardshield-migrate = "migrate:main"
cardshield-produce = "producer:main"
cardshield-score = "streaming_job:main"
cardshield-api = "api:main"
cardshield-export-static = "static_export:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "app_logging",
    "api",
    "cassandra_repository",
    "config",
    "migrate",
    "model_service",
    "preprocessing",
    "producer",
    "schemas",
    "streaming_job",
    "static_export",
    "training",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = true
warn_unreachable = true
ignore_missing_imports = true
